# noctrail

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  clippy.toml
.cargo/: config.toml
.codex/skills/git-commit-standard/: SKILL.md
.codex/skills/git-commit-standard/agents/: openai.yaml
.codex/skills/review-rust-code/: SKILL.md
.codex/skills/review-rust-code/agents/: openai.yaml
.codex/skills/write-rust-code/: SKILL.md
.codex/skills/write-rust-code/agents/: openai.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  installer-smoke.yml
LICENSES/: CaskaydiaMono-SOURCE.md
assets/fonts/caskaydia-mono/: README.md
crates/noctrail-agent/: Cargo.toml
crates/noctrail-agent/src/: lib.rs
crates/noctrail-app/: Cargo.toml
crates/noctrail-app/src/: clipboard.rs  gui.rs  input.rs  layout_projection.rs  lib.rs  logging.rs  main.rs  redaction.rs  status.rs
crates/noctrail-app/src/features/: agent.rs  blocks.rs  mod.rs
crates/noctrail-app/src/gui/: platform.rs
crates/noctrail-app/src/gui/platform/: macos.rs  unix.rs  windows.rs
crates/noctrail-app/src/input/: keyboard_encoder.rs
crates/noctrail-cli/: Cargo.toml
crates/noctrail-cli/src/: installer.rs  main.rs
crates/noctrail-cli/src/commands/: common.rs  doctor.rs  hook.rs  mod.rs  pty.rs  render.rs  shell.rs  unicode.rs
crates/noctrail-cli/src/installer/: platform.rs
crates/noctrail-cli/src/installer/platform/: linux.rs  macos.rs  windows.rs
crates/noctrail-config/: Cargo.toml
crates/noctrail-config/src/: lib.rs
crates/noctrail-layout/: Cargo.toml
crates/noctrail-layout/src/: lib.rs
crates/noctrail-pty/: Cargo.toml
crates/noctrail-pty/src/: lib.rs  platform.rs  shell.rs
crates/noctrail-pty/src/platform/: windows.rs
crates/noctrail-pty/src/shell/: platform.rs
crates/noctrail-render/: Cargo.toml
crates/noctrail-render/src/: font.rs  lib.rs
crates/noctrail-render/src/font/: platform.rs
crates/noctrail-runtime/: Cargo.toml
crates/noctrail-runtime/src/: lib.rs
crates/noctrail-term/: Cargo.toml
crates/noctrail-term/src/: lib.rs  recording.rs
crates/noctrail-term/tests/: replay_fixtures.rs
docs/: config-reference.md  plan.md  privacy-security.md  real-plan.md  release-blockers.md  rendering-architecture-and-selection.md  rendering-ecosystem-notes.md  roadmap.md
docs/adr/: 0001-crate-boundaries.md  0002-renderer-wgpu-text-stack.md  0003-terminal-core-first.md  0004-runtime-event-model.md  0005-agent-deferred-review-boundary.md  0006-platform-module-boundaries.md
docs/specs/: layout-tree.md  render-input.md  runtime-events.md  shell-integration-osc.md  terminal-sequences.md  terminal-state.md
docs/test-matrix/: platform-smoke.md  render-fixtures.md  terminal-fixtures.md  tui-compatibility.md
examples/: noctrail.example.toml
scripts/: compare-terminal-input-latency.ps1  package-installer.ps1  package-installer.sh  windows-enforce-present-latency.ps1  windows-gui-verify.ps1  windows-measure-input-latency.ps1  windows-measure-present-latency.ps1
tests/fixtures/pty/: README.md
tests/fixtures/render/: README.md  ascii.ntshot  cursor.ntshot  pane-border.ntshot  selection.ntshot  underline.ntshot
tests/fixtures/terminal/: core.ntrec
