[workspace]
members = [
    "crates/noctrail-agent",
    "crates/noctrail-app",
    "crates/noctrail-cli",
    "crates/noctrail-config",
    "crates/noctrail-layout",
    "crates/noctrail-pty",
    "crates/noctrail-render",
    "crates/noctrail-runtime",
    "crates/noctrail-term",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "LGPL-3.0-or-later"
authors = ["Noctrail contributors"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"
