[workspace]
members = [
    "crates/noctrail-agent",
    "crates/noctrail-app",
    "crates/noctrail-cli",
    "crates/noctrail-config",
    "crates/noctrail-layout",
    "crates/noctrail-pty",
    "crates/noctrail-render",
    "crates/noctrail-runtime",
    "crates/noctrail-term",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "LGPL-3.0-or-later"
authors = ["Noctrail contributors"]
homepage = "https://github.com/ChenMiaoi/noctrail"
repository = "https://github.com/ChenMiaoi/noctrail"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "warn"
unwrap_used = "warn"

[profile.dev]
opt-level = 1
debug = 0
debug-assertions = false
overflow-checks = false

[profile.dev.package.noctrail-app]
opt-level = 3

[profile.dev.package.noctrail-render]
opt-level = 3

[profile.dev.package.noctrail-term]
opt-level = 3

[profile.dev.package.noctrail-runtime]
opt-level = 3

[profile.dev.package.noctrail-layout]
opt-level = 3

[profile.dev.package.noctrail-pty]
opt-level = 3

[profile.dev.package.cosmic-text]
opt-level = 3

[profile.dev.package.swash]
opt-level = 3

[profile.dev.package.fontdb]
opt-level = 3
