[package]
name = "noctrail-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Desktop app shell for Noctrail."
publish = false

[dependencies]
noctrail-layout = { path = "../noctrail-layout" }
noctrail-pty = { path = "../noctrail-pty" }
noctrail-render = { path = "../noctrail-render" }
noctrail-runtime = { path = "../noctrail-runtime" }
noctrail-term = { path = "../noctrail-term" }
thiserror = "2"

[[bin]]
name = "noctrail-app"
path = "src/main.rs"
