[package]
name = "noctrail-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Desktop app shell for Noctrail."
publish = false

[dependencies]
noctrail-agent = { path = "../noctrail-agent" }
noctrail-config = { path = "../noctrail-config" }
noctrail-layout = { path = "../noctrail-layout" }
noctrail-pty = { path = "../noctrail-pty" }
noctrail-render = { path = "../noctrail-render" }
noctrail-runtime = { path = "../noctrail-runtime" }
noctrail-term = { path = "../noctrail-term" }
winit = "0.30.13"
arboard = "3.6"
serde_json = "1"
thiserror = "2"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }

[[bin]]
name = "noctrail-app"
path = "src/main.rs"

[package.metadata.packager]
product-name = "Noctrail"
identifier = "com.chenmiaoi.noctrail"
publisher = "Noctrail contributors"
homepage = "https://github.com/ChenMiaoi/noctrail"
description = "Desktop app shell for Noctrail."
before-packaging-command = "cargo build -p noctrail-app --release"
out-dir = "../../target/packager"
binaries-dir = "../../target/release"
resources = [
    "../../README.md",
    "../../LICENSES/LGPL-3.0-or-later.txt",
]

[package.metadata.generate-rpm]
name = "noctrail"
summary = "Desktop app shell for Noctrail."
url = "https://github.com/ChenMiaoi/noctrail"
assets = [
    { source = "../../target/release/noctrail-app", dest = "/usr/bin/noctrail-app", mode = "755" },
    { source = "../../README.md", dest = "/usr/share/doc/noctrail/README.md", mode = "644", doc = true },
    { source = "../../LICENSES/LGPL-3.0-or-later.txt", dest = "/usr/share/licenses/noctrail/LGPL-3.0-or-later.txt", mode = "644", doc = true },
]
