[package]
name = "noctrail-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line entry point for Noctrail."
publish = false

[[bin]]
name = "noctrail"
path = "src/main.rs"

[dependencies]
glob = "0.3"
noctrail-pty = { path = "../noctrail-pty" }
noctrail-render = { path = "../noctrail-render" }
noctrail-runtime = { path = "../noctrail-runtime" }
noctrail-term = { path = "../noctrail-term" }
