[package]
name = "noctrail-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Configuration boundary for Noctrail."
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"
