[package]
name = "noctrail-layout"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Workspace and pane layout boundary for Noctrail."
publish = false

[dependencies]
noctrail-runtime = { path = "../noctrail-runtime" }
thiserror = "2"
