[package]
name = "noctrail-render"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Render plan and backend boundary for Noctrail."
publish = false

[dependencies]
noctrail-term = { path = "../noctrail-term" }
pollster = "0.4"
thiserror = "2"
wgpu = "29"
winit = "0.30.13"
